# svd2py

./: .gitignore  LICENSE  README.md  pylama.ini  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: python-package.yml
src/svd2py/: objects.py  parser.py
svd2py/: __init__.py  app.py  objects.py  parser.py
tests/: conftest.py  test_svd_to_py.py
tests/data/svd/: file1.svd  file2.svd  file3.svd  file4.svd  file5.svd  file6.svd  file7.svd  file8.svd
tests/data/yaml/: file1.yaml  file2.yaml  file3.yaml  file4.yaml  file5.yaml  file6.yaml  file7.yaml  file8.yaml
